--- a/frontend/src/styles/reset.css
+++ b/frontend/src/styles/reset.css
@@ -110,7 +110,7 @@ body {
   background-color: var(--body-bg);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
   overflow-x: hidden;
 }
 
