--- a/frontend/src/admin/pages/ApplicationDetailsPage.module.css
+++ b/frontend/src/admin/pages/ApplicationDetailsPage.module.css
@@ -144,7 +144,7 @@
   font-size: 1.25rem;
   font-weight: 600;
   color: #343a40;
-  margin: 0 0 1rem 0;
+  margin: 0 0 1rem;
   padding-bottom: 0.5rem;
   border-bottom: 1px solid #e9ecef;
 }
@@ -233,11 +233,8 @@
 /* Modal Styles */
 .modalOverlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  inset: 0;
+  background-color: rgb(0 0 0 / 50%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -279,7 +276,7 @@
 }
 
 .modalText {
-  margin: 0 0 1rem 0;
+  margin: 0 0 1rem;
   font-size: 0.875rem;
   color: #343a40;
 }
@@ -408,7 +405,7 @@
 .spinner {
   width: 40px;
   height: 40px;
-  border: 4px solid rgba(0, 0, 0, 0.1);
+  border: 4px solid rgb(0 0 0 / 10%);
   border-radius: 50%;
   border-top-color: #a72b31;
   animation: spin 1s ease-in-out infinite;
