--- a/frontend/src/admin/pages/PendingVerificationsPage.module.css
+++ b/frontend/src/admin/pages/PendingVerificationsPage.module.css
@@ -18,7 +18,7 @@
   font-size: 1.75rem;
   font-weight: 600;
   color: #343a40;
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 0.5rem;
 }
 
 .pageSubtitle {
@@ -162,7 +162,7 @@
   font-size: 1.25rem;
   font-weight: 600;
   color: #343a40;
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 0.5rem;
 }
 
 .emptyState p {
@@ -185,7 +185,7 @@
 .spinner {
   width: 40px;
   height: 40px;
-  border: 4px solid rgba(0, 0, 0, 0.1);
+  border: 4px solid rgb(0 0 0 / 10%);
   border-radius: 50%;
   border-top-color: #a72b31;
   animation: spin 1s ease-in-out infinite;
