--- a/frontend/src/components/ui/Input/Input.module.css
+++ b/frontend/src/components/ui/Input/Input.module.css
@@ -6,7 +6,7 @@
   background-color: var(--bs-white);
   color: var(--bs-gray-900);
   width: 100%;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.07); /* Subtle inner shadow */
+  box-shadow: inset 0 1px 2px rgb(0 0 0 / 7%); /* Subtle inner shadow */
   transition:
     border-color 0.3s ease,
     box-shadow 0.3s ease;
@@ -23,14 +23,14 @@
   outline: none;
   border-color: var(--rojo);
   box-shadow:
-    0 0 0 3px rgba(167, 43, 49, 0.15),
-    inset 0 1px 2px rgba(0, 0, 0, 0.07); /* Softer outer glow */
+    0 0 0 3px rgb(167 43 49 / 15%),
+    inset 0 1px 2px rgb(0 0 0 / 7%); /* Softer outer glow */
 }
 
 .inputError {
   /* Error style */
   border-color: var(--rojo);
-  background-color: rgba(167, 43, 49, 0.02); /* Faint red background */
+  background-color: rgb(167 43 49 / 2%); /* Faint red background */
 }
 
 .input:disabled {
