--- a/frontend/src/components/ui/LoadingSpinner.module.css
+++ b/frontend/src/components/ui/LoadingSpinner.module.css
@@ -10,7 +10,7 @@
 .spinner {
   width: 50px;
   height: 50px;
-  border: 5px solid rgba(0, 0, 0, 0.1);
+  border: 5px solid rgb(0 0 0 / 10%);
   border-radius: 50%;
   border-top-color: var(--color-primary);
   animation: spin 1s ease-in-out infinite;
